# patishie

./: Cargo.toml  Makefile  README.md  docker-compose.yml
config/patishie/: default.json  docker.json  production.json
src/: config.rs  error.rs  main.rs  task.rs  utils.rs
src/api/: api.rs
src/converters/: string.rs
src/db/: channel.rs  entities.rs  items.rs  mod.rs  model.rs  mongo.rs  pipeline.rs  timers.rs
src/entities/: channel.rs  mod.rs  potential_articles.rs  rss.rs  source_type.rs
src/services/: bakery.rs  channel.rs  mod.rs  panya.rs  rss.rs  vec.rs
